# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  10 Mar 2005; Marius Mauch <genone@gentoo.org> pym/portage.py:
  fix breakage wrt portage_const.EBUILD_PHASES

  09 Mar 2005; Brian Harring <ferringb@gentoo.org> bin/emerge:
  emerge --metadata can now be ran by non-root users.

  09 Mar 2005: Brian Harring <ferringb@gentoo.org> pym/ebuild.py, bin/emerge:
  Don't set 02775 on depcache_dir.
  Ever.
  If the cache backend is stupid and can't get the perms right, fix the backend.

  09 Mar 2005; Brian Harring <ferringb@gentoo.org> pym/cache/fs_template.py:
  _ensure_dirs didn't account for umask.

  09 Mar 2005; Brian Harring <ferringb@gentoo.org> pym/cache/flat_list.py:
  Damn I'm cool- _eclasses_ are now properly returned.

  09 Mar 2005; Brian Harring <ferringb@gentoo.org> pym/portage.py, pym/ebuild.py:
  Two issues- use parsed restrict handling, and depends phase not bailing when
  a cpv's key's can't be sourced

  09 Mar 2005; Marius Mauch <genone@gentoo.org> pym/elog_modules/mod_mail.py:
  Add a "To" header to mails.

  09 Mar 2005; Marius Mauch <genone@gentoo.org> bin/ebuild-daemon.sh:
  portageq shouldn't prefix its output as it's used in variables.

  08 Mar 2005; Brian Harring <ferringb@gentoo.org> pym/ebuild.py: Revert part of 
  the restrict/portage_restrict changes so use conditionals in restrict work
  again.

  08 Mar 2005; Brian Harring <ferringb@gentoo.org> pym/portage.py, pym/portage_dep.py,
  pym/portage_util.py, pym/config.py:  Moved match_from_list, match_to_* stuff
  into portage_dep, and updated references, and fixed a few bugs related to 
  match_* locations from last check in.
  Threw out match_from_list_original func- it's dead code.
